Fixed exec:exec Added README file on how to start